@@ -35,14 +35,11 @@ namespace zorba
 {
 
 
-root_static_context::root_static_context() : static_context()
-{
-  theTypemgr = new RootTypeManager();
-}
-
 #ifdef WIN32
-static void append_to_path(std::vector<zstring>& aPath, zstring& zorba_root,
-                           zstring& relpath)
+static void append_to_path(
+    std::vector<zstring>& aPath,
+    zstring& zorba_root,
+    zstring& relpath)
 {
   ascii::replace_all(relpath, '/', '\\');
   zstring full_path(zorba_root);
@@ -51,6 +48,16 @@ static void append_to_path(std::vector<zstring>& aPath, zstring& zorba_root,
   aPath.push_back(full_path);
 }
 #endif
+
+
+
+root_static_context::root_static_context() 
+  :
+  static_context()
+{
+  theTypeManager = &GENV_TYPESYSTEM;
+}
+
 
 void root_static_context::init() 
 {
@@ -125,18 +132,29 @@ void root_static_context::init()
   // compute the relative path to zorba_simplestore.dll (this dll)
   WCHAR  wdll_path[1024];
   DWORD dll_path_size;
-  dll_path_size = GetModuleFileNameW(NULL, wdll_path, sizeof(wdll_path)/sizeof(wdll_path[0]));
+  dll_path_size = GetModuleFileNameW(NULL,
+                                     wdll_path,
+                                     sizeof(wdll_path)/sizeof(wdll_path[0]));
   if(dll_path_size)
   {
     wdll_path[dll_path_size] = 0;
     char  dll_path[1024];
-    WideCharToMultiByte(CP_UTF8, 0, wdll_path, -1, dll_path, sizeof(dll_path), NULL, NULL);
+    WideCharToMultiByte(CP_UTF8,
+                        0,
+                        wdll_path,
+                        -1,
+                        dll_path,
+                        sizeof(dll_path),
+                        NULL,
+                        NULL);
+
     char *last_slash = strrchr(dll_path, '\\');
     if(last_slash)
     {
       last_slash[0] = 0;
       last_slash = strrchr (dll_path, '\\');
-      if (last_slash) {
+      if (last_slash) 
+      {
         last_slash[1] = 0;
         zstring zorba_root_dir(dll_path);
 
