@@ -7,7 +7,8 @@ version 2.2
   * Added index management function to the C++ api's StaticCollectionManager.
   * Fixed bug #905041 (allow for the default element and function namespaces to be
     set multiple times via the c++ api).
-
+  * Fixed bug #905050 (setting and getting the context item type via the c++ api)
+	
 version 2.1
 
 New Features:
